<resources>
    <string name="app_name">ContactsApp</string>
    <string name="etUsername">Username</string>
    <string name="etPassword">Password</string>
    <string name="login_btnLogin">Login</string>
    <string name="register_etAgain">Again</string>
    <string name="etPhoneNumber">Phone Number</string>
    <string name="etSignup">Sign up</string>
    <string name="tv_login">Login</string>
    <string name="login_btnSignup">Sign up</string>
    <string name="tv_loginError">Wrong Username or Password!</string>
    <string name="tv_register">Sign up to ContactsApp</string>
    <string name="btnAdd">Save</string>
    <string name="btnSet">SET</string>
    <string name="the_passwords_are_different">The passwords are different!</string>
    <string name="tv_password_min_length">The password must be 8 characters or longer!</string>
    <string name="tv_password_numeric">The password must contain at least ONE numeric character!</string>
    <string name="tv_password_lowercase">The password must contain at least ONE lowercase character!</string>
    <string name="tv_password_uppercase">The password must contain at least ONE uppercase character!</string>
    <string name="tv_username_min_length">The username must be two characters or longer!</string>
    <string name="invalid_username">Invalid username! Only letters and numbers are allowed.</string>
    <string name="username_taken">Username is already in used.</string>
    <string name="contact_name">Contact Full Name</string>
    <string name="username_regex">[A-Za-z0-9]{2,20}$</string>
    <string name="password_regex">[A-Za-z0-9]{8,20}$</string>
    <string name="btnDelete">Delete</string>
    <string name="btnCancel">Cancel</string>
    <string name="birthday_text">BirthDay (optional)</string>
    <string name="tv_password_max_length">Password is too long! Please enter a password with 20 characters or fewer.</string>
    <string name="tv_username_max_length">Username is too long! Please enter a name with 20 characters or fewer.</string>
    <string name="back">back</string>
    <string name="settings">Settings</string>
    <string name="tv_contactname_min_length">Contact Name must be two characters or longer!</string>
    <string name="tv_contactname_max_length">Contact name is too long!\nPlease enter a name with 20 characters or fewer.</string>
    <string name="tv_contactname_only_letters">Contact name must contain only letters!</string>
    <string name="tv_invalid_phone_number">Invalid phone number!\n Please enter a 10-digit numeric phone number.</string>
    <string name="contact_name_regex">[A-Za-z ]+</string>
    <string name="phone_number_validation">^[0-9]{10}$</string>

</resources>