<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/backImageButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:background="@null"
        android:contentDescription="@string/back"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/settingsImageButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:background="@null"
        android:contentDescription="@string/settings"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_settings" />
</LinearLayout>
