<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/easysale"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.110000014"
        tools:layout_editor_absoluteX="1dp"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_registerError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="invisible"
            tools:text="Error"
            tools:visibility="visible"
            android:textColor="@color/red"
            android:paddingBottom="15dp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_register"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingBottom="10dp"/>

        <EditText
            android:id="@+id/et_registerUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etUsername"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/edit_box"
            android:layout_margin="15dp"
            android:padding="12dp"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_user"
            />


        <EditText
            android:id="@+id/et_registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/etPassword"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="15dp"
            android:padding="12dp"
            android:background="@drawable/edit_box"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_password"
            />

        <EditText
            android:id="@+id/et_registerAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/register_etAgain"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/edit_box"
            android:drawablePadding="20dp"
            android:layout_margin="15dp"
            android:padding="12dp"
            android:drawableStart="@drawable/ic_password"
            />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etSignup"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/green_btn"
            android:padding="15dp"
            android:drawableEnd="@drawable/ic_signup"
            android:fontFamily="sans-serif-black"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:drawablePadding="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>