<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.AddContactActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/easysale"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <TextView
            android:id="@+id/tv_addContactError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:text="Error"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/contactNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/contact_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/contactPhoneNumberField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/etPhoneNumber"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/hollow_background"
            android:drawableEnd="@drawable/ic_add"
            android:text="@string/btnAdd"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/hollow_background"
            android:drawableEnd="@drawable/ic_delete"
            android:enabled="false"
            android:text="Delete"
            android:textSize="20sp"
            android:visibility="invisible"
            tools:visibility="visible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>